# the-martian-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-1390280c0ee127db29ee177686c1582f4add80153b0ffbebda24e59671f256ba.json  query-1c22529150adc77b8177d0a1473c22f7e6aecd8183c73d3109c34863debe181a.json  query-3299f5eaa96f8a1f6c1420f3d32ec9b3abf06c9d315f533185c6049a35768432.json  query-485bd66cf4cdbeddfe6afd9582cf75b58f2fc18530adba815ebd965a83d71236.json  query-65f2dae21b65e22a5ad37800a22b35c8cb6fa0a4dcada064e39774f52a6cc325.json  query-70785f1aa22046a026429b8511a07e3dcc809645d791f2b138f28674b970c54b.json  query-80864d692523de3cddea0db216314e9d073eb3ac04bac60f57a766e619d83ec0.json  query-9c8a050e29d8a64fac5efa642bda064cf2faaf3d140bdad6f7abc0d1558dffcd.json  query-a8e0c6da649f58f51523b7003ecfe8f3408a9cad80d669dc8b266ada81319a45.json  query-b05fa3a49005ebdbbce34e0230b538fdbab7ac9d9c56c032dea30365eb44a97f.json  query-b24a91b4af30abfd36f88c4552d3d808aa77c00c9161f7a57bb10cf22cec7ead.json  query-b25d29b0c0df21b50d795400905a89f0918d4e2843462b303d8dfc06dc043012.json  query-d0f9c6e2052a3cdd48f7ced2dd719f4b5e55a4db087d502eac0d3fa6e76211fd.json  query-e4fe1b487126adb9e6d44851eb724a1130af19498ceee07df5907a0227e8ac80.json  query-ea0bcf85511c386561a833618b339dfd8ca4b945045d54bb9c47302d8492f194.json  query-ed8c546f35d63053ec9929722dbb08fecadf5c6c201b6c4969834baff9b67851.json  query-f67fa76e34de7ff8acb35c3c71968ab9bcb4753817e2b7740816bf0322ebbb00.json  query-f82f6a09832e6d9b3e41ee190048e921b71e537583a0b5129128fb86d4bb1637.json
postgres/: Dockerfile  (+1 more)
(+27 files in other folders)
