[package]
name = "the-martian-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
dotenvy = "0.15"
dptree = "0.3"
image = "0.24"
image_hasher = "1.2"
once_cell = "1.18"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
teloxide = { version = "0.12", default-features = false, features = ["rustls", "ctrlc_handler", "throttle"] }
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"
